Update shapes.css fixed error in lower-left z-index

--- a/shapes.css
+++ b/shapes.css
@@ -33,7 +33,7 @@
       float: left;
       position: fixed;
       bottom: 0rem;
-      left: 0rem
+      left: 0rem;
       z-index: -1;
 }
 
